// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Article 1`] = `
<React.Fragment>
  <meta
    content="My article"
    property="og:title"
  />
  <meta
    content="https://example.com/"
    property="og:url"
  />
  <meta
    content="https://example.com/image.png"
    property="og:image"
  />
  <meta
    content="800"
    property="og:image:width"
  />
  <meta
    content="600"
    property="og:image:height"
  />
  <meta
    content="https://example.com/image-2.png"
    property="og:image"
  />
  <meta
    content="800"
    property="og:image:width"
  />
  <meta
    content="600"
    property="og:image:height"
  />
  <meta
    content="en-US"
    property="og:locale"
  />
  <meta
    content="pt-BR"
    property="og:locale:alternate"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="2025-12-20T00:00:00.000Z"
    property="article:published_time"
  />
</React.Fragment>
`;

exports[`Article with URL instances 1`] = `
<React.Fragment>
  <meta
    content="URL instance test"
    property="og:title"
  />
  <meta
    content="https://example.com/"
    property="og:url"
  />
  <meta
    content="https://example.com/image.png"
    property="og:image"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="2025-12-20T00:00:00.000Z"
    property="article:published_time"
  />
</React.Fragment>
`;
